CSS fix for too long words.
git-svn-id: http://svn.codingteam.net/jappix/trunk@802 6385bf5c-453f-4a1d-ac06-b509b7c32dfb

--- a/css/mini.css
+++ b/css/mini.css
@@ -8,7 +8,7 @@ This is the Jappix Mini CSS stylesheet for Jappix
 License: AGPL
 Author: Valérian Saliou
 Contact: http://project.jappix.com/contact
-Last revision: 14/01/11
+Last revision: 15/01/11
 
 */
 
@@ -184,6 +184,8 @@ Last revision: 14/01/11
 
 #jappix_mini div.jm_received-messages p {
 	margin: 3px 0;
+	white-space: pre-wrap;
+	word-wrap: break-word;
 }
 
 #jappix_mini div.jm_received-messages div.jm_group {
